--- a/ProAcc/Views/Customers_old/_CustomerIndex.cshtml
+++ b/ProAcc/Views/Customers_old/_CustomerIndex.cshtml
@@ -58,7 +58,7 @@
             type: "GET",
             data: { id: id },
             success: function (result) {
-
+                debugger;
                 $("#customerid").val(result.Customer_ID);
                 $("#txtCompanyName").val(result.Company_Name);
                 $("#txtIndustrySector").val(result.Industry_Sector);
