--- a/ProAcc/Views/PhaseMaster/_ActivityCreate.cshtml
+++ b/ProAcc/Views/PhaseMaster/_ActivityCreate.cshtml
@@ -28,7 +28,7 @@
                     <span id="lblPhaseID" style="color:red" />
                 </div>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label class="control-label col-md-6 required">Application Area Name</label>
                 <div class="col-md-10">
                     <select class="form-control" id="drpArea">
@@ -40,7 +40,7 @@
                     </select>
                     <span id="lblAppID" style="color:red" />
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
