--- a/ProAcc/Views/PhaseMaster/_TeamCreate.cshtml
+++ b/ProAcc/Views/PhaseMaster/_TeamCreate.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-    <a class="card-title">Create Team</a>
+    <a class="card-title">Create Role's</a>
 <div style="padding:1em;">
     <div class="row">
         <div class="col-6">
@@ -76,17 +76,20 @@
                     url: '@Url.Action("Create","TeamMaster")',
                     data: { RoleName: TeamName},
                     //dataType: "json",
-                    success: function (response) {
+                          success: function (response) {
+                         //debugger;
                         if (response == "success") {
                             alert("Team Saved successfully!");
                             location.reload();
                               //window.location = "/Employee/Index"
                         }
                     },
-                    failure: function (response) {
+                          failure: function (response) {
+                              debugger;
                        alert(response.responseText);
                     },
-                    error: function (response) {
+                          error: function (response) {
+                         debugger;
                         alert(response.responseText);
                     }
             });
