--- a/ProAcc/Views/ProjectMonitor/Create.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Assement Monitor";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 <script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
@@ -26,7 +26,7 @@
     font-size: 11px!important;
 }
 </style>
-<a class="card-title">Create</a>
+@*<a class="card-title">Create</a>*@
 <div style="margin-left:20px;margin-top:20px">
     <table id="jqGrid"></table>
     <div id="jqGridPager"></div>
@@ -131,14 +131,15 @@
 			$("#jqGrid").jqGrid({
 				url: "@Url.Action("GetData","ProjectMonitor")",
 				datatype: "json",
-				editurl:"@Url.Action("SubmitProjectMonitor","ProjectMonitor")",
+				//editurl:"@Url.Action("SubmitProjectMonitor","ProjectMonitor")",
 				colModel: [
                     { label: 'ID', name: 'LocalID', width: 25, editable: false },
-					{ label: 'Instance', name: 'Instance', width: 25, editable: false },
+					{ label: 'Instance', name: 'Instance', width: 25, editable: false,hidden:true,editrules: {edithidden:true}   },
                     {
                         label: 'Phase', name: 'PhaseId', index: 'PhaseId', width: 70,
                         sortable: true, align: 'center', 
-                        cellEdit: true, edittype: 'select', formatter: 'select',
+                        cellEdit: true, edittype: 'select', formatter: 'select'
+                        ,
                         editoptions: {
                             value:
                                 GetPhaseDropDown()
@@ -158,25 +159,28 @@
                         edittype: 'checkbox', editoptions: { value: "True:False" }, formatter: "checkbox",
                     },
                     //{ label: 'PendingId', name: 'PendingId', width: 80, sorttype: 'integer', editable: false },
-
-                    {
-                        label: 'Pending With', name: 'PendingId', index: 'PendingId', width: 70,
-                        sortable: true, align: 'center', editable: true,
-                        cellEdit: true, edittype: 'select', formatter: 'select',
-                        editoptions: {
-                            value:
-                                GetPendingDropDown()
-                        }
-                    },
+                    { label: 'Pending With ', name: 'Pending', width: 80, sorttype: 'integer', editable: true },
+                    //{
+                    //    label: 'Pending With', name: 'PendingId', index: 'PendingId', width: 70,
+                    //    sortable: true, align: 'center', editable: true,
+                    //    cellEdit: true, edittype: 'select', formatter: 'select'
+                    //    //,
+                    //    //editoptions: {
+                    //    //    value:
+                    //    //        GetPendingDropDown()
+                    //    //}
+                    //},
                     //{ label: 'PendingId', name: 'Task', width: 80, sorttype: 'integer', editable: false },
                     {
                         label: 'Delay Occurred (Y/N)', name: 'Delay_occurred', width: 80, sorttype: 'integer', editable: true,
                         edittype: 'checkbox', editoptions: { value: "True:False" }, formatter: "checkbox",
                     },
 					// sorttype is used only if the data is loaded locally or loadonce is set to true
-				//	{ label: 'Title', name: 'Title', width: 80, sorttype: 'number', editable: false },
-					{label: 'Team', name : 'TeamID',index :'TeamID',width:70,sortable:true,align:'center',editable:true,
-											cellEdit:true,edittype: 'select',formatter: 'select',
+                    //	{ label: 'Title', name: 'Title', width: 80, sorttype: 'number', editable: false },
+                    {
+                        label: 'Role', name: 'RoleID', index: 'RoleID', width: 70, sortable: true, align: 'center', editable: false,
+                        cellEdit: true, edittype: 'select', formatter: 'select'
+                        ,
 											//editoptions: {
 											//    value: "FE:FedEx;TN:TNT;DH:DHL",
 											//    defaultValue: "DH"
@@ -187,29 +191,32 @@
                             // getAllSelectOptions()
                         }
                     },
-					{label: 'Named Owner of Task', name : 'ConsultantID',index :'ConsultantID',width:70,sortable:true,align:'center',editable:true,
-											cellEdit:true,edittype: 'select',formatter: 'select',
-											//editoptions: {
-											//    value: "FE:FedEx;TN:TNT;DH:DHL",
-											//    defaultValue: "DH"
-											//}
-                        editoptions: {
-                            value:
-                                GetConsultantDropDown()
-                            // getAllSelectOptions()
-                        }
+                    {
+                        label: 'Named Owner of Task', name: 'ConsultantID', index: 'ConsultantID', width: 70, sortable: true, align: 'center', editable: false,
+                        cellEdit: true, edittype: 'select', formatter: 'select'
+           //             ,
+											////editoptions: {
+											////    value: "FE:FedEx;TN:TNT;DH:DHL",
+											////    defaultValue: "DH"
+											////}
+           //             editoptions: {
+           //                 value:
+           //                     GetConsultantDropDown()
+           //                 // getAllSelectOptions()
+           //             }
                     },
 					{label: 'Status', name : 'StatusID',index :'ConsultantID',width:70,sortable:true,align:'center',editable:true,
-											cellEdit:true,edittype: 'select',formatter: 'select',
-											//editoptions: {
-											//    value: "FE:FedEx;TN:TNT;DH:DHL",
-											//    defaultValue: "DH"
-											//}
-                        editoptions: {
-                            value:
-                                GetStatusDropDown()
-                            // getAllSelectOptions()
-                        }
+                        cellEdit: true, edittype: 'select', formatter: 'select'
+           //             ,
+											////editoptions: {
+											////    value: "FE:FedEx;TN:TNT;DH:DHL",
+											////    defaultValue: "DH"
+											////}
+           //             editoptions: {
+           //                 value:
+           //                     GetStatusDropDown()
+           //                 // getAllSelectOptions()
+           //             }
                     },
                     {
                         label: 'Est. Duration (hours)', name: 'EST_hours', formatter: "number",edittype:"text", width: 80, editable: true,
@@ -266,7 +273,7 @@
 					{
 						name: "",
 						label: "Actions",
-						width: 25,
+						width: 75,
 						align: "center",
 						formatter: "actions",
 						formatoptions: {
@@ -292,7 +299,7 @@
 				hoverrows: true,
 				height:'auto',
 				rowNum: 10,
-				caption: 'Project Monitor',
+				caption: 'Assement',
 				sortable: true,
                 grouping: false,
 				pager: "#jqGridPager",
@@ -387,7 +394,7 @@
 				 var Parameters = {};
                 $.ajax({
                     type: "POST",
-                    url: '@Url.Action("GetTeam","ProjectMonitor")',
+                    url: '@Url.Action("GetRole","ProjectMonitor")',
                     //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
                     dataType: "json",
 					async: false,
@@ -395,9 +402,9 @@
                     success: function (Data) {
 						 for (var i = 0; i < Data.length; i++) {
                            var obj = {};
-                             var TeamName = Data[i].TeamName;
-                            var key = ""+Data[i].Id;
-                            Parameters[key] = TeamName;
+                             var RoleName = Data[i].RoleName;
+                            var key = ""+Data[i].RoleId;
+                            Parameters[key] = RoleName;
                         }
                     },
                     error: function (data) {
