--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -10,14 +10,18 @@
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 
 <a class="card-title">User Index</a>
+<hr />
 <table class="table" id="tblUserTable">
     <thead>
         <tr>
             @*<th>
-                @Html.DisplayNameFor(model => model.UserId)
-            </th>*@
+            @Html.DisplayNameFor(model => model.UserId)
+        </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cre_on)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EMail)
@@ -29,8 +33,8 @@
                 @Html.DisplayNameFor(model => model.LoginId)
             </th>
             @*<th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>*@
+            @Html.DisplayNameFor(model => model.Password)
+        </th>*@
             <th>
                 Role
                 @*@Html.DisplayNameFor(model => model.RoleID)*@
@@ -40,7 +44,7 @@
                 @*@Html.DisplayNameFor(model => model.UserTypeID)*@
             </th>
             <th>
-                Company_Name
+                Company Name
                 @*@Html.DisplayNameFor(model => model.Customer.Company_Name)*@
             </th>
 
@@ -50,54 +54,65 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                @Html.HiddenFor(modelItem => item.UserId)
-                @*<td>
-                    @Html.HiddenFor(modelItem => item.UserId)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EMail)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LoginId)
-                </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.Password)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.RoleMaster.RoleName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.User_Type.UserType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Customer.Company_Name)
-                </td>
+        <tr>
+            @Html.HiddenFor(modelItem => item.UserId)
+            @*<td>
+            @Html.HiddenFor(modelItem => item.UserId)
+        </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cre_on)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EMail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LoginId)
+            </td>
+            @*<td>
+            @Html.DisplayFor(modelItem => item.Password)
+        </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.RoleMaster.RoleName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User_Type.UserType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Customer.Company_Name)
+            </td>
 
-                <td>
-                    <div class="row">
-                        &nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
-                        <a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
-                    </div>
+            <td>
+                <div class="row">
+                    &nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
+                    <a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
+                </div>
 
-                    @*@Html.ActionLink("Edit", "Edit", new { id = item.UserId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.UserId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.UserId, @class = "userDelete" })*@
-                </td>
-            </tr>
+                @*@Html.ActionLink("Edit", "Edit", new { id = item.UserId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.UserId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.UserId, @class = "userDelete" })*@
+            </td>
+        </tr>
         }
     </tbody>
 </table>
 
 <script>
     $(document).ready(function () {
-        $("#tblUserTable").dataTable();
+        $("#tblUserTable").dataTable( {
+            "order": [[1, 'desc']],
+            "columnDefs": [
+            {
+                "targets": [ 1 ],
+                "visible": false
+            }
+        ]
+} );
     });
 
     $(".userDelete").on("click", function () {
